setup playground
in here initialize all function to define
